part2/2.06/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes: # Define volume
        - name: shared-image
          emptyDir: {}
        - name: config
          configMap:
              name: project-configmap
      containers:
        - name: hash-reader
          image: laurihakala/hash-reader:81d8de955275
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: hash-writer
          image: laurihakala/hash-writer:f8048e5c4dc8
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
